--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,90 +1,100 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    namespace 'com.example.sportsteamnew'
-    compileSdk 33
-
-    defaultConfig {
-        applicationId "com.example.sportsteamnew"
-        minSdk 24
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+    androidExtensions {
+        experimental = true
+    }
+    dataBinding {
+        enabled = true
+    }
+    buildFeatures {
+        compose true
+        viewBinding true
+    }
+    kapt {
+        correctErrorTypes true
     }
 
+    compileSdkVersion 33
+    defaultConfig {
+        applicationId "com.connectavo.app.sportsProject"
+        minSdkVersion 25
+        targetSdkVersion 33
+
+        ///////update the force update version from constant file////////
+        versionCode 225
+        versionName "3.9.55"
+        vectorDrawables.useSupportLibrary = true
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+    }
     buildTypes {
+        debug {
+            manifestPlaceholders = [enableCrashReporting: "false"]
+        }
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [enableCrashReporting: "true"]
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    kotlinOptions.jvmTarget = "1.8"
+    lint {
+        abortOnError false
     }
-    buildFeatures {
-        compose true
-    }
+    namespace 'com.connectavo.app.sportsProject'
+
     composeOptions {
         kotlinCompilerExtensionVersion '1.2.0'
-    }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
+        kotlinCompilerVersion '1.7.0'
     }
 }
 
 dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
+    // Chuck
+    debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.5.0"
+
+    // Web APIs Dependencies
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
-//    implementation "androidx.compose.ui:ui:1.3.3"
-//    implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
-//    implementation 'androidx.compose.material:material:1.3.1'
-//    implementation 'androidx.appcompat:appcompat:1.6.1'
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-//    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
-//    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
-//    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
+
+    //Koin
+    implementation "org.koin:koin-core:2.0.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
+    implementation "org.koin:koin-java:2.0.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    implementation 'androidx.work:work-runtime-ktx:2.8.0-beta01'
 
 
-//     Web APIs Dependencies
-//    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
-//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-//    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
-//    implementation 'com.google.code.gson:gson:2.8.9'
-//
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-//
-//    //Koin
-//    implementation "org.koin:koin-core:2.0.1"
-//    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
-//    implementation "org.koin:koin-java:2.0.1"
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-//
-//    implementation 'io.reactivex.rxjava3:rxjava:3.0.1'
-//    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-//
-//    implementation 'androidx.work:work-runtime-ktx:2.8.1'
-//    implementation 'com.android.support:multidex:1.0.3'
-//
-
+    // Jetpack Compose
+    implementation "androidx.compose.ui:ui:1.0.5"
+    implementation "androidx.compose.material:material:1.0.5"
+    implementation "androidx.compose.ui:ui-tooling:1.0.5"
+    implementation "androidx.activity:activity-compose:1.3.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
 }
